# LazzyORM

./: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  Makefile  PKG-INFO  PYPI_PUBLISHING.md  PYPI_READY.md  Readme.md  UPGRADE_SUMMARY.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
docs/: DOCUMENTATION_INDEX.md  index.md
examples/: crud_example.py  csv_import_example.py
lazzy_orm/: __init__.py  exceptions.py
lazzy_orm/config/: __init__.py  connector.py  date_parser.py
lazzy_orm/lazzy_delete/: __init__.py  lazzy_delete.py
lazzy_orm/lazzy_fetch/: __init__.py  lazzy_fetch.py
lazzy_orm/lazzy_insert/: __init__.py  lazzy_insert.py
lazzy_orm/lazzy_query/: __init__.py  lazzy_query.py
lazzy_orm/lazzy_update/: __init__.py  lazzy_update.py
lazzy_orm/logger/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_connector.py  test_date_parser.py  test_exceptions.py  test_lazy_fetch.py  test_lazy_query.py
